<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_weight="1"
            app:cornerRadius="5dp"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="@string/mc"
            android:textColor="@color/black"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_weight="1"
            app:cornerRadius="5dp"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="@string/mr"
            android:textColor="@color/black"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_weight="1"
            app:cornerRadius="5dp"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="@string/ms"
            android:textColor="@color/black"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_weight="1"
            app:cornerRadius="5dp"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="@string/m_plus"
            android:textColor="@color/black"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_weight="1"
            app:cornerRadius="5dp"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="@string/m_minus"
            android:textColor="@color/black"
            android:layout_margin="5dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
